# api/src/routes/recipe.route.ts
@@ -1,5 +1,5 @@
 import express from "express";
-import { getRecipeByIdController, getRecipesByCategoryController, getRecipesByLocationController, getRecipesController } from "../controllers/recipe.controller";
+import { getFeaturedRecipesController, getRecipeByIdController, getRecipesByCategoryController, getRecipesByLocationController, getRecipesController } from "../controllers/recipe.controller";
 import { recipePath } from "../utils/constants";
 
 const recipeRoute = express.Router();
@@ -8,5 +8,6 @@ recipeRoute.get(recipePath.getAllRecipes, getRecipesController);
 recipeRoute.get(recipePath.getRecipeById, getRecipeByIdController);
 recipeRoute.get(recipePath.getRecipesByCategory, getRecipesByCategoryController);
 recipeRoute.get(recipePath.getRecipesByLocation, getRecipesByLocationController);
+recipeRoute.get(recipePath.getFeaturedRecipes, getFeaturedRecipesController);
 
 export { recipeRoute };
